add tokens in registration
