# swagger.json
@@ -15,6 +15,9 @@
     "servers": [
       {
         "url": "https://pet-support-test1.onrender.com"
+      },
+      {
+        "url": "http://localhost:4000"
       }
     ],
 
@@ -66,7 +69,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/RegistrationResponse"
+                    "$ref": "#/components/schemas/AuthResponse"
                   }
                 }
               }
@@ -121,7 +124,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/LoginResponse"
+                    "$ref": "#/components/schemas/AuthResponse"
                   }
                 }
               }
@@ -402,6 +405,9 @@
             },
             "400": {
               "description": "Bad request"
+            },
+            "500": {
+              "description": "Invalid id"
             }
           },
           "security":[{"Bearer": []}]
@@ -433,6 +439,9 @@
             },
             "404": {
               "description": "Not found"
+            },
+            "500": {
+              "description": "Invalid id"
             }
           }
         }
@@ -736,15 +745,6 @@
             }
           }
         },
-        "RegistrationResponse":{
-          "type": "object",
-          "properties": {
-            "email": {
-              "type": "string",
-              "example": "john@email.com"
-            }
-          }
-        },
         "Error":{
           "type": "object",
           "properties": {
@@ -768,20 +768,12 @@
             }
           }
         },
-        "LoginResponse":{
+        "AuthResponse":{
           "type": "object",
           "properties": {
             "user": {
               "type": "object",
-              "example":{
-                "name": "theUser",
-                "email": "john@email.com",
-                "avatarURL": "http://res.cloudinary.com/dvqddp5la/image/upload/v1673618335/w3t87ucpbxquzk24kmwx.jpg",
-                "phone":"12345",
-                "city":"Kyiv",
-                "birthday":"01.01.1900",
-                "favoriteNotices": []
-              }
+              "$ref": "#/components/schemas/User"
             },
             "accessToken": {
               "type": "string"
@@ -796,15 +788,7 @@
           "properties": {
             "user": {
               "type": "object",
-              "example":{
-                "name": "theUser",
-                "email": "john@email.com",
-                "avatarURL": "http://res.cloudinary.com/dvqddp5la/image/upload/v1673618335/w3t87ucpbxquzk24kmwx.jpg",
-                "phone":"12345",
-                "city":"Kyiv",
-                "birthday":"01.01.1900",
-                "favoriteNotices": []
-              }
+              "$ref": "#/components/schemas/User"
             },
             "pets": {
               "type": "array",
@@ -815,18 +799,34 @@
         "User":{
           "type": "object",
           "properties": {
-            "user": {
-              "type": "object",
-              "example":{
-                "name": "theUser",
-                "email": "john@email.com",
-                "avatarURL": "http://res.cloudinary.com/dvqddp5la/image/upload/v1673618335/w3t87ucpbxquzk24kmwx.jpg",
-                "phone":"12345",
-                "city":"Kyiv",
-                "birthday":"01.01.1900",
-                "favoriteNotices": []
-              }
-            }
+                "name": {
+                  "type": "string",
+                  "example": "theUser"
+                },
+                "email":{
+                  "type": "string",
+                  "example": "john@email.com"
+                },
+                "avatarURL":{
+                  "type": "string",
+                  "example": "http://res.cloudinary.com/dvqddp5la/image/upload/v1673618335/w3t87ucpbxquzk24kmwx.jpg"
+                },
+                "phone":{
+                  "type": "string",
+                  "example": "12345"
+                },
+                "city":{
+                  "type": "string",
+                  "example": "Kyiv"
+                },
+                "birthday":{
+                  "type": "string",
+                  "example": "01.01.1900"
+                },
+                "favoriteNotices": {
+                  "type": "array",
+                  "example": []
+                }
           }
         },
         "FieldToUpdate":{
